updates added on 8/15

--- a/templates/results.html
+++ b/templates/results.html
@@ -2,9 +2,15 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Results Page</title>
+    <title>Results</title>
 </head>
 <body>
-{{usr}}
+
+<p> {{usr}}</p>
+
+
+<p>{{doc}}</p>
+
+
 </body>
 </html>
