--- a/templates/index.html
+++ b/templates/index.html
@@ -6,7 +6,7 @@
 </head>
 <body>
 
-<form action = "#" method = "post">
+<form action = "#" method = post>
     <p> Share your statement:</p>
     <p><input type = "text" name="thought" /></p>
     <p><input type = "submit" value = " submit" /> </p>
