SENTIMENT ANALYSIS RATING CHANGED

--- a/templates/index.html
+++ b/templates/index.html
@@ -7,9 +7,9 @@
 <body>
 
 <form action = "#" method = post>
-    <p> Share your statement:</p>
-    <p><input type = "text" name="thought" /></p>
-    <p><input type = "submit" value = " submit" /> </p>
+    <p><h2> Enter sentence for sentiment analysis:</h2></p>
+    <p><h2><input type = "text" name="thought" /></h2></p>
+    <p><h2><input type = "submit" value = " submit" /></h2> </p>
 </form>
 </body>
 </html>
