--- a/templates/pos.html
+++ b/templates/pos.html
@@ -6,8 +6,8 @@
 </head>
 <body>
 <form action = "#" method = post>
-    <p> Enter text:</p>
-    <p><input type = "text" name="content" /></p>
+    <p><h1> Enter text:</h1></p>
+    <p><h1><input type = "text" name="content" /></h1></p>
     <input type = "submit" value = " submit" />
 </form>
 </body>
